[gd_scene load_steps=6 format=2]

[ext_resource path="res://Snap.gd" type="Script" id=1]
[ext_resource path="res://textures/placement_test.png" type="Texture" id=2]
[ext_resource path="res://sounds/toggle_selection.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/buy_sell.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/error.mp3" type="AudioStream" id=5]

[node name="CellSelector" type="Node2D"]
script = ExtResource( 1 )

[node name="TrapPreview" type="Sprite" parent="."]

[node name="Selection" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="toggle_sound_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 2.0

[node name="buy_sell_sound_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="error_sound_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
